--- a/_html/iban.html
+++ b/_html/iban.html
@@ -258,9 +258,9 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-question js-popup-wrap no-close">
-								<a href="" class="btn-popup js-btn-toggle active">What is an individual IBAN account?</a>
+								<a href="" class="btn-popup js-btn-toggle active">What is Credits’ STO?</a>
 								<div class="popup-content-block js-popup-block">
-									<p>The Wallet is the first section in the Credits' App where the User can open an IBAN account and get a bank card. The second is the Crypto section where crypto products are offered.</p>
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
 								</div>
 							</div>
 						</div>
@@ -270,7 +270,7 @@
 							<div class="item-tile-question js-popup-wrap no-close">
 								<a href="" class="btn-popup js-btn-toggle">What is an STO token?</a>
 								<div class="popup-content-block js-popup-block">
-									<p>The Wallet is the first section in the Credits' App where the User can open an IBAN account and get a bank card. The second is the Crypto section where crypto products are offered.</p>
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
 								</div>
 							</div>
 						</div>
@@ -278,9 +278,9 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-question js-popup-wrap no-close">
-								<a href="" class="btn-popup js-btn-toggle">How to open an IBAN account?</a>
+								<a href="" class="btn-popup js-btn-toggle">What is the difference between an STO token and a crypto utility token?</a>
 								<div class="popup-content-block js-popup-block">
-									<p>The Wallet is the first section in the Credits' App where the User can open an IBAN account and get a bank card. The second is the Crypto section where crypto products are offered.</p>
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
 								</div>
 							</div>
 						</div>
@@ -288,9 +288,9 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-question js-popup-wrap no-close">
-								<a href="" class="btn-popup js-btn-toggle">How long does it take to open?</a>
+								<a href="" class="btn-popup js-btn-toggle">How to become an investor?</a>
 								<div class="popup-content-block js-popup-block">
-									<p>The Wallet is the first section in the Credits' App where the User can open an IBAN account and get a bank card. The second is the Crypto section where crypto products are offered.</p>
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
 								</div>
 							</div>
 						</div>
@@ -298,9 +298,9 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-question js-popup-wrap no-close">
-								<a href="" class="btn-popup js-btn-toggle">Where is the IBAN account opened?</a>
+								<a href="" class="btn-popup js-btn-toggle">Whose citizens can participate?</a>
 								<div class="popup-content-block js-popup-block">
-									<p>The Wallet is the first section in the Credits' App where the User can open an IBAN account and get a bank card. The second is the Crypto section where crypto products are offered.</p>
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
 								</div>
 							</div>
 						</div>
@@ -308,9 +308,9 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-question js-popup-wrap no-close">
-								<a href="" class="btn-popup js-btn-toggle">Is my money safe?</a>
+								<a href="" class="btn-popup js-btn-toggle">How can you make money on an STO?</a>
 								<div class="popup-content-block js-popup-block">
-									<p>The Wallet is the first section in the Credits' App where the User can open an IBAN account and get a bank card. The second is the Crypto section where crypto products are offered.</p>
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
 								</div>
 							</div>
 						</div>
@@ -318,9 +318,9 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-question js-popup-wrap no-close">
-								<a href="" class="btn-popup js-btn-toggle">How much does it cost to open an IBAN account?</a>
+								<a href="" class="btn-popup js-btn-toggle">What are the payment methods?</a>
 								<div class="popup-content-block js-popup-block">
-									<p>The Wallet is the first section in the Credits' App where the User can open an IBAN account and get a bank card. The second is the Crypto section where crypto products are offered.</p>
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
 								</div>
 							</div>
 						</div>
@@ -328,9 +328,9 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-question js-popup-wrap no-close">
-								<a href="" class="btn-popup js-btn-toggle">How much do IBAN account transactions cost?</a>
+								<a href="" class="btn-popup js-btn-toggle">How can I sell tokens in the future? What is the secondary market for them?</a>
 								<div class="popup-content-block js-popup-block">
-									<p>The Wallet is the first section in the Credits' App where the User can open an IBAN account and get a bank card. The second is the Crypto section where crypto products are offered.</p>
+									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
 								</div>
 							</div>
 						</div>
