--- a/_html/index.html
+++ b/_html/index.html
@@ -36,6 +36,10 @@
 					<li><a href="overview.html">Overview</a></li>
 					<li><a href="bounty.html">Bounty</a></li>
 					<li><a href="ld.html">Landing</a></li>
+					<li>___POPUPS___</li>
+					<li><a href="" class="js-popup-open" data-popup="popup-read">Popup read</a></li>
+					<li><a href="" class="js-popup-open" data-popup="popup-main">Popup main</a></li>
+					
 				</ul>
             </div>
             <!-- /page -->
