--- a/_html/overview.html
+++ b/_html/overview.html
@@ -94,7 +94,7 @@
 								<p><b>Equity offered:</b> 13.07%</p>
 								<p><b>Tokenized shares:</b> Min investment: $100, max $1,000 <span class="tile-help"></span></p>
 								<p><b>Direct investment:</b> Minimum investment: $50.000+.</p>
-								<p class="text-sep"><a href="">Read all conditions</a></p>
+								<p class="text-sep"><a href="" class="js-popup-open" data-popup="popup-read">Read all conditions</a></p>
 							</div>
 						</div>
 						<!--/item wrap-->
@@ -375,7 +375,7 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-question js-popup-wrap no-close">
-								<a href="" class="btn-popup js-btn-toggle">What is Credits’ STO?</a>
+								<a href="" class="btn-popup js-btn-toggle active">What is Credits’ STO?</a>
 								<div class="popup-content-block js-popup-block">
 									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
 								</div>
@@ -385,7 +385,7 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-question js-popup-wrap no-close">
-								<a href="" class="btn-popup js-btn-toggle active">What is an STO token?</a>
+								<a href="" class="btn-popup js-btn-toggle">What is an STO token?</a>
 								<div class="popup-content-block js-popup-block">
 									<p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
 								</div>
