--- a/_html/pitch.html
+++ b/_html/pitch.html
@@ -859,7 +859,7 @@
 									<h3 class="h6-title">Igor Chugunov</h3>
 									<p>Entrepreneur in the field of Fintech and IT start-ups for&nbsp;17&nbsp;years. Created and sold several projects.</p>
 									<div class="action-wrap">
-										<a href="">Read more</a>
+										<a href="" class="js-popup-open" data-popup="popup-main">Read more</a>
 									</div>
 									<div class="soc-wrap">
 										<a href="" class="btn-action-ico ico-soc">
@@ -1000,7 +1000,111 @@
 								<p>Competitor statistics by founding date, amounts raised and company valuation in recent rounds.</p>
 							</div>
 							<div class="table-inner-wrap">
-								<img src="./img/table01.png" alt="">
+								<table class="tbl-inner tbl-first-left">
+									<thead>
+										<tr>
+											<th class="th-clear"></th>
+											<th>Revolut</th>
+											<th>Starling</th>
+											<th>Chime</th>
+											<th>Vivid</th>
+											<th>Bitpanda</th>
+											<th>N26</th>
+											<th>Monzo</th>
+											<th>Nubank</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Founded</td>
+											<td>2012</td>
+											<td>2014</td>
+											<td>2013</td>
+											<td>2019</td>
+											<td>2018</td>
+											<td>2013</td>
+											<td>2015</td>
+											<td>2013</td>
+										</tr>
+										<tr>
+											<td>Seed</td>
+											<td>8.69М</td>
+											<td>10М</td>
+											<td>3.8М</td>
+											<td>20М</td>
+											<td>10М</td>
+											<td>27М</td>
+											<td>2М</td>
+											<td>2М</td>
+										</tr>
+										<tr>
+											<td>A</td>
+											<td>66M</td>
+											<td>48M</td>
+											<td>17M</td>
+											<td>60M</td>
+											<td>52M</td>
+											<td>10M</td>
+											<td>6M</td>
+											<td>14.3M</td>
+										</tr>
+										<tr>
+											<td>A-B</td>
+											<td>1.63B</td>
+											<td>813B</td>
+											<td>2.02B</td>
+											<td>120М</td>
+											<td>433М</td>
+											<td>1.58B</td>
+											<td>1.04B</td>
+											<td>2.44B</td>
+										</tr>
+										<tr>
+											<td>Total money raised</td>
+											<td>1.705B</td>
+											<td>871M</td>
+											<td>2.041B</td>
+											<td>200M</td>
+											<td>495M</td>
+											<td>1.617B</td>
+											<td>1.010B</td>
+											<td>2.456B</td>
+										</tr>
+										<tr>
+											<td>N users</td>
+											<td>16M</td>
+											<td>1.5M</td>
+											<td>13M</td>
+											<td>500k</td>
+											<td>3.5M</td>
+											<td>7M</td>
+											<td>5М</td>
+											<td>48.1М</td>
+										</tr>
+										<tr class="tr-att">
+											<td>Current valuation</td>
+											<td>33B</td>
+											<td>3.3B</td>
+											<td>25B</td>
+											<td>775M</td>
+											<td>4100B</td>
+											<td>9B</td>
+											<td>4.5B</td>
+											<td>41.5B</td>
+										</tr>
+										<tr>
+											<td>MAU,s Price in last round</td>
+											<td>2063</td>
+											<td>2200</td>
+											<td>1923</td>
+											<td>10.333</td>
+											<td>1171</td>
+											<td>1286</td>
+											<td>900</td>
+											<td>863</td>
+										</tr>
+									</tbody>
+								</table>
 							</div>
 							<div class="info-inner-wrap">
 								<p>Note: <br>Source: Company websites and news web sites. Based on publicly available information. <br>This list is provided for reference and is not exhaustive and is not the basis for making an investment decision. Calculations can content assumption and mistakes</p>
@@ -1015,7 +1119,138 @@
 								<p>Valuations of competitors' companies by the P/S ratio (the company's market capitalization in an investment transaction divided by the company's sales volume) on A-C Series rounds.</p>
 							</div>
 							<div class="table-inner-wrap">
-								<img src="./img/table01.png" alt="">
+								<table class="tbl-inner">
+									<thead>
+										<tr>
+											<th>Company</th>
+											<th>PS Ratio</th>
+											<th>Valuation</th>
+											<th>Revenue</th>
+											<th>Year</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Revolut</td>
+											<td>116.6</td>
+											<td>$33B</td>
+											<td>$282M</td>
+											<td>2021</td>
+										</tr>
+										<tr>
+											<td>Chime</td>
+											<td>4.7</td>
+											<td>$25B</td>
+											<td>$200M</td>
+											<td>2022</td>
+										</tr>
+										<tr>
+											<td>Kraken</td>
+											<td>250</td>
+											<td>$10.8B</td>
+											<td>$40M</td>
+											<td>2022</td>
+										</tr>
+										<tr>
+											<td>Wise</td>
+											<td>16.03</td>
+											<td>$11B</td>
+											<td>$686M</td>
+											<td>2022</td>
+										</tr>
+										<tr>
+											<td>Varo</td>
+											<td>1.87</td>
+											<td>$10B</td>
+											<td>$41.4M</td>
+											<td>2022</td>
+										</tr>
+										<tr>
+											<td>Current</td>
+											<td>55.1</td>
+											<td>$2.2B</td>
+											<td>$39.3M</td>
+											<td>2021</td>
+										</tr>
+										<tr>
+											<td>Aspiration</td>
+											<td>96.1</td>
+											<td>$500M</td>
+											<td>$5.2M</td>
+											<td>2021</td>
+										</tr>
+										<tr>
+											<td>Monzo</td>
+											<td>16.6</td>
+											<td>$4.5B</td>
+											<td>£154M</td>
+											<td>2022</td>
+										</tr>
+										<tr>
+											<td>SOFI</td>
+											<td>3.527</td>
+											<td>$5B</td>
+											<td>$1.511B</td>
+											<td>2022</td>
+										</tr>
+										<tr>
+											<td>Starling</td>
+											<td>78.1</td>
+											<td>$2.5B</td>
+											<td>£188M</td>
+											<td>2022</td>
+										</tr>
+										<tr>
+											<td>N26</td>
+											<td>45.5</td>
+											<td>$9B</td>
+											<td>€184.2M</td>
+											<td>2022</td>
+										</tr>
+										<tr>
+											<td>Atom Bank</td>
+											<td>8.9</td>
+											<td>$570M</td>
+											<td>$49.49M</td>
+											<td>2019</td>
+										</tr>
+										<tr>
+											<td>Moonpay</td>
+											<td>54.6</td>
+											<td>$3.4B</td>
+											<td>$62.2M</td>
+											<td>2022</td>
+										</tr>
+										<tr>
+											<td>Nu bank</td>
+											<td>17.6</td>
+											<td>$23B</td>
+											<td>$1.3B</td>
+											<td>2022</td>
+										</tr>
+										<tr>
+											<td>Bitpanda</td>
+											<td>8.59</td>
+											<td>$4.1B</td>
+											<td>€477.9M</td>
+											<td>2022</td>
+										</tr>
+										<tr>
+											<td>Monese</td>
+											<td>12.32</td>
+											<td>$540M</td>
+											<td>$6.6M</td>
+											<td>2022</td>
+										</tr>
+										<tr class="tr-att">
+											<td>Average</td>
+											<td>44.6</td>
+											<td></td>
+											<td></td>
+											<td></td>
+										</tr>
+									</tbody>
+								</table>
 							</div>
 							<div class="info-inner-wrap">
 								<p>Note: <br>Source: Company websites and news web sites. Based on publicly available information. <br>This list is provided for reference and is not exhaustive and is not the basis for making an investment decision. Calculations can content assumption and mistakes</p>
