--- a/cryptoaccounts.html
+++ b/cryptoaccounts.html
@@ -523,6 +523,72 @@
         </footer>
         <!-- /footer -->
 
+
+        <div class="popup-outer-box" id="popup-read">
+            <div class="popup-box">
+                <div class="popup-title-wrap">
+                    <div class="popup-title">For Proof reading</div>
+                    <a href="" class="btn-action-ico ico-close-main js-popup-close"></a>
+                </div>
+                <div class="popup-content-wrap">
+                    <p>Comment text comment text comment text Comment text comment text <a href="">link to site.com</a></p>
+                    <p>Comment text comment text comment text Comment text comment text comment text </p>
+                </div>
+            </div>
+        </div><!--/popup-outer-box-->
+
+        <div class="popup-outer-box" id="popup-main">
+            <div class="popup-box popup-main">
+                <a href="" class="btn-action-ico ico-close-main js-popup-close"></a>
+                <div class="popup-content-wrap">
+                    <div class="popup-info-box">
+                        <div class="info-inner-wrap">
+                            <div class="info-title-wrap">
+                                <div class="info-title">Igor Chugunov</div>
+                                <div class="info-subtitle">CEO & Founder</div>
+                                <div class="soc-wrap">
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc001.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc002.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc003.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="photo-inner-wrap">
+                                <div class="elm-photo">
+                                    <img src="./img/lead.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="info-desc-wrap">
+                            <h3 class="info-title">Education: 2023, Banking business </h3>
+                            <p>Entrepreneur in FINTECH startups, projects in the banking area, blockchain & cryptocurrency
+                                Igor is a highly motivated senior manager with a proven record of delivering value-driven,
+                                business strategy led technology projects, especially in the financial industry.</p>
+                            <h3 class="info-title">Education: Banking</h3>
+                            <p>Entrepreneur in FINTECH startups, projects in the banking area, blockchain & cryptocurrency
+                                Igor is a highly motivated senior manager with a proven record of delivering value-driven,
+                                business strategy led technology projects, especially in the financial industry.</p>
+                            <h3 class="info-title">Education: Banking</h3>
+                            <ul>
+                                <li>Entrepreneur in FINTECH startups,</li>
+                                <li>projects in the banking area, blockchain & cryptocurrency</li>
+                                <li>Igor is a highly motivated senior manager</li>
+                                <li>with a proven record of delivering value-driven, business strategy led technology projects, especially in the financial industry.</li>
+                            </ul>
+                            <h3 class="info-title">Personal</h3>
+                            <p>42 year old. A father of three kids</p>
+                            <p>Hobby. A father of three kids</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!--/popup-outer-box-->
+
     </div>
     <!-- /wrap -->
 
