--- a/overview.html
+++ b/overview.html
@@ -184,7 +184,7 @@
                             <p><b>Equity offered:</b> 13.07%</p>
                             <p><b>Tokenized shares:</b> Min investment: $100, max $1,000 <span class="tile-help"></span></p>
                             <p><b>Direct investment:</b> Minimum investment: $50.000+.</p>
-                            <p class="text-sep"><a href="">Read all conditions</a></p>
+                            <p class="text-sep"><a href="" class="js-popup-open" data-popup="popup-read">Read all conditions</a></p>
                         </div>
                     </div>
                     <!--/item wrap-->
@@ -465,7 +465,7 @@
                     <!--item wrap-->
                     <div class="item-wrap">
                         <div class="item-tile-question js-popup-wrap no-close">
-                            <a href="" class="btn-popup js-btn-toggle">What is Credits’ STO?</a>
+                            <a href="" class="btn-popup js-btn-toggle active">What is Credits’ STO?</a>
                             <div class="popup-content-block js-popup-block">
                                 <p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
                             </div>
@@ -475,7 +475,7 @@
                     <!--item wrap-->
                     <div class="item-wrap">
                         <div class="item-tile-question js-popup-wrap no-close">
-                            <a href="" class="btn-popup js-btn-toggle active">What is an STO token?</a>
+                            <a href="" class="btn-popup js-btn-toggle">What is an STO token?</a>
                             <div class="popup-content-block js-popup-block">
                                 <p>These are shares in the company that are structured in the form of security tokens on the blockchain. Each token is backed by shares in Credits Digital Corp. Unicorn Tokenization Corp. acts as the issuer of the tokens, behind which Credits company’s stocks are held. <br>These tokens are similar to securities or ETFs. Tokens/shares have a denomination, circulation period and a maturity date. Read more here.</p>
                             </div>
@@ -729,6 +729,72 @@
             </div>
         </footer>
         <!-- /footer -->
+
+
+        <div class="popup-outer-box" id="popup-read">
+            <div class="popup-box">
+                <div class="popup-title-wrap">
+                    <div class="popup-title">For Proof reading</div>
+                    <a href="" class="btn-action-ico ico-close-main js-popup-close"></a>
+                </div>
+                <div class="popup-content-wrap">
+                    <p>Comment text comment text comment text Comment text comment text <a href="">link to site.com</a></p>
+                    <p>Comment text comment text comment text Comment text comment text comment text </p>
+                </div>
+            </div>
+        </div><!--/popup-outer-box-->
+
+        <div class="popup-outer-box" id="popup-main">
+            <div class="popup-box popup-main">
+                <a href="" class="btn-action-ico ico-close-main js-popup-close"></a>
+                <div class="popup-content-wrap">
+                    <div class="popup-info-box">
+                        <div class="info-inner-wrap">
+                            <div class="info-title-wrap">
+                                <div class="info-title">Igor Chugunov</div>
+                                <div class="info-subtitle">CEO & Founder</div>
+                                <div class="soc-wrap">
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc001.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc002.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc003.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="photo-inner-wrap">
+                                <div class="elm-photo">
+                                    <img src="./img/lead.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="info-desc-wrap">
+                            <h3 class="info-title">Education: 2023, Banking business </h3>
+                            <p>Entrepreneur in FINTECH startups, projects in the banking area, blockchain & cryptocurrency
+                                Igor is a highly motivated senior manager with a proven record of delivering value-driven,
+                                business strategy led technology projects, especially in the financial industry.</p>
+                            <h3 class="info-title">Education: Banking</h3>
+                            <p>Entrepreneur in FINTECH startups, projects in the banking area, blockchain & cryptocurrency
+                                Igor is a highly motivated senior manager with a proven record of delivering value-driven,
+                                business strategy led technology projects, especially in the financial industry.</p>
+                            <h3 class="info-title">Education: Banking</h3>
+                            <ul>
+                                <li>Entrepreneur in FINTECH startups,</li>
+                                <li>projects in the banking area, blockchain & cryptocurrency</li>
+                                <li>Igor is a highly motivated senior manager</li>
+                                <li>with a proven record of delivering value-driven, business strategy led technology projects, especially in the financial industry.</li>
+                            </ul>
+                            <h3 class="info-title">Personal</h3>
+                            <p>42 year old. A father of three kids</p>
+                            <p>Hobby. A father of three kids</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!--/popup-outer-box-->
 
     </div>
     <!-- /wrap -->
