--- a/partnerships.html
+++ b/partnerships.html
@@ -319,10 +319,9 @@
                             <div class="item-tile-prt-third text-body-small">
                                 <div class="tile-title-wrap">
                                     <div class="tile-title">Partner</div>
-                                    <div class="tile-info">To be announced soon</div>
                                 </div>
                                 <div class="tile-logo-text">
-                                    TBA
+                                    <div class="tile-logo-inner-text text-body">To be announced soon</div>
                                 </div>
                                 <div class="tile-info-wrap">
                                     <p>Credits is going to launch a prepaid UnionPay card for travelers with cryptocurrency support in 2023.</p>
@@ -365,10 +364,9 @@
                             <div class="item-tile-prt-third text-body-small">
                                 <div class="tile-title-wrap">
                                     <div class="tile-title">Partner</div>
-                                    <div class="tile-info">To be announced soon</div>
                                 </div>
                                 <div class="tile-logo-text">
-                                    TBA
+                                    <div class="tile-logo-inner-text text-body">To be announced soon</div>
                                 </div>
                                 <div class="tile-info-wrap">
                                     <p>Credits partner for providing an investment gateway and stock market – direct access to the world's largest stock exchanges in the US, Europe and Asian markets.</p>
